project/logs/20250609_125739.log
Use Adapater:NVIDIA GeForce RTX 3070 Laptop GPU

FeatrueLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3D.VS.hlsl,profile:vs_6_0

Object3D.VS.hlsl:16:1: error: unknown type name 'VertexShaderOutput'; did you mean 'VertexShaderInput'?
VertexShaderOutput main(VertexShaderInput input)
^~~~~~~~~~~~~~~~~~
VertexShaderInput
Object3D.VS.hlsl:10:8: note: 'VertexShaderInput' declared here
struct VertexShaderInput
       ^
Object3D.VS.hlsl:18:5: error: unknown type name 'VertexShaderOutput'; did you mean 'VertexShaderInput'?
    VertexShaderOutput output;
    ^~~~~~~~~~~~~~~~~~
    VertexShaderInput
Object3D.VS.hlsl:10:8: note: 'VertexShaderInput' declared here
struct VertexShaderInput
       ^

